[package]
name = "zapf"
description = "ZAP file format."
authors = [
    "Speykious <speykious@gmail.com>",
    "Steve Gremory <stevegremory2006@gmail.com>"
]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
env_logger = "0.9.1"
log = "0.4.17"
walkdir = "2.3.2"
